fixing on mobile view responsvie

--- a/src/assets/styles/sass/5.Layout/_header.scss
+++ b/src/assets/styles/sass/5.Layout/_header.scss
@@ -2,7 +2,7 @@
 
 .header-home {
   display: flex;
-  left: 121px;
+  left: 12%;
   flex-direction: row;
   position: absolute;
   width: 88%;
@@ -16,6 +16,8 @@
 
   &__logo {
     width: 200px;
+    position: relative;
+    left: -23px;
   }
 
   &__nav {
