--- a/src/assets/styles/sass/6.Pages/_home.scss
+++ b/src/assets/styles/sass/6.Pages/_home.scss
@@ -4,11 +4,11 @@
   &__title {
     position: relative;
     text-align: right;
-    right: 150px;
+    right: 11%;
     //left: 0;
     top: 4px;
     //margin-top: 22px;
-    margin: 22px auto 0 275px;
+    margin: 22px auto 0 62%;
     //width: 310px;
   }
 
